# PerfTrace

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pypi-deploy.yml  test.yml
autometrics/: core.py  metrics.py
autometrics/analysis/: statistics.py
autometrics/core/: collectors.py  context_manager.py  decorators.py
autometrics/storage/: __init__.py  sqlite_storage.py
example/: test_data.py
perftrace/: __init__.py  constant.py
perftrace/cli/: command_utils.py  commands.py  db_utils.py  helper.py  logger.py  main.py  registry.py
perftrace/cli/commands/: compare_data.py  config.py  database_info.py  doctor.py  exceptions.py  export_csv.py  export_html.py  export_json.py  fastest_execution.py  frequency_count.py  get_memory.py  help.py  history_command.py  io_report.py  list.py  recent_data.py  show_data.py  slowest_execution.py  stats.py  summary.py  system_info.py  system_monitor.py  system_status.py  today_function_call.py  top_commands.py  version.py
perftrace/core/: buffer.py  collectors.py  context_manager.py  decorators.py
perftrace/storage/: __init__.py  database_loader.py  schema.py  serializer.py
perftrace/storage/duckdb/: duckdb_storager.py  schema.py
perftrace/storage/postgres/: Postgres_storager.py  schema.py
perftrace/storage/sqlite_db/: sqlite_storage.py
tests/: test_compare_data.py  test_exceptions_cmd.py  test_frequency_count.py  test_io_report.py  test_recent_data.py  test_show_data.py  test_stats.py  test_summary.py  test_system_monitor.py  test_top_commands.py  test_version_fastest_slowest.py
