[project]
name = "perftrace"
version = "0.1.0"
description = "A lightweight Python profiler for tracing CPU, memory, I/O, GC, and system metrics with storage and CLI support."
authors = [
    {name = "Maharavan",email = "90346511+Maharavan@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
perftrace = "perftrace.cli.main:main"