[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "perftrace"
version = "1.0.0"
description = "A lightweight Python profiler for tracing CPU, memory, I/O, GC, and system metrics with storage and CLI support."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Maharavan", email = "90346511+Maharavan@users.noreply.github.com" }
]

dependencies = [
  "click",
  "rich",
  "pandas",
  "numpy",
  "psycopg2-binary",
  "duckdb"
]

[project.scripts]
perftrace = "perftrace.cli.main:main"
